Update 'go-dgstyvra' component image to: quay.io/rhtap_qe/go-dgstyvra:d527cd90a79b4ce194c7198c19e390c27377590f@sha256:1f43a727c17de801b226995ce0e01ee356b62ddc1c8a5276c2f6b2fbad2904c8

--- a/components/go-dgstyvra/overlays/development/deployment-patch.yaml
+++ b/components/go-dgstyvra/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: go-dgstyvra
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/rhtap-task-runner:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/go-dgstyvra:d527cd90a79b4ce194c7198c19e390c27377590f@sha256:1f43a727c17de801b226995ce0e01ee356b62ddc1c8a5276c2f6b2fbad2904c8
+          name: container-image
